--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col mb-3">
         <h1>About Me!</h1>
-        <h3>My name is Griffin, I am 15 and a Junior at MRHS.</h3>
+        <h3>My name is Griffin, I am 15 and a Junior.</h3>
         <h4>Classes I've Taken:</h4>
         <ul>
           <li>Electronics</li>
@@ -58,6 +58,8 @@
         <img src="https://picsum.photos/400/200">
       </div>
     </div>
+
+    <hr>
 
     <h1 class="mb-5">I took these courses because they all took my interest and had to do with technology. I like to take classes and learn more about electronics, computers, and coding.</h5>
 
