Changed the size of the the list items.
Made the font-size bigger.

--- a/aboutme.html
+++ b/aboutme.html
@@ -48,11 +48,11 @@
         <h1>About Me!</h1>
         <h3>My name is Griffin, I am 15 and a Junior.</h3>
         <h4>Classes I've Taken:</h4>
-        <ul>
-          <li>Electronics</li>
-          <li>Honors Web Design</li>
-          <li>Advanced Honors Web Design</li>
-        </ul>
+          <ul class="list">
+            <li>Electronics</li>
+            <li>Honors Web Design</li>
+            <li>Advanced Honors Web Design</li>
+          </ul>
       </div>
       <div class="col mb-3">
         <img src="https://picsum.photos/400/200">
