--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/3gdvU3Z.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Famous Quotes</h5>
+            <p class="card-text">Famous Quotes by Hellen Keller</p>
+            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -130,10 +130,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/UrlEJl1.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Favorite Food</h5>
+            <p class="card-text">Website About Cheese</p>
+            <a href="https://griffinzw.github.io/Food-/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -141,10 +141,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/LwDggkJ.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">My Hero</h5>
+            <p class="card-text">Paul George's Story</p>
+            <a href="https://griffinzw.github.io/My-Hero/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -152,10 +152,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/9HKdlLK.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Thankfullness</h5>
+            <p class="card-text">Showing My Thankfullness</p>
+            <a href="https://griffinzw.github.io/Thankfullness/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
