--- a/aboutme.html
+++ b/aboutme.html
@@ -17,8 +17,7 @@
   <!-- Into Header -->
   <div class="container my-5">
     <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
-    <p class="lead">
-      Add a breif description of who you are.
+    <p class="lead">      
     </p>
 
     <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-primary">523gziedenweber@frhsd.com</a>
@@ -34,7 +33,7 @@
         <a class="nav-link active" aria-current="page" href="aboutme.html">About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Portfolio</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact Me</a>
