--- a/portfolio.html
+++ b/portfolio.html
@@ -40,76 +40,7 @@
       </li>
     </ul>
   </div>
-  <!-- Work Experience -->
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col">
-        <h3 class="mb-3">Work Experience</h3>
-        <!-- Job #1 -->
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="mx-3">
-              <h4>MRHS</h4>
-              <div><strong>2019-Current</strong></div>
-              Web Design CTE Program
-            </div>
-            <ul class="list-group list-group-flush mt-2">
-              <li class="list-group-item">Honors Web Design</li>
-              <li class="list-group-item">Advanced Honors Web Design</li>
-              <li class="list-group-item">NJIT Web Design</li>
-            </ul>
-          </div>
-        </div>
-        <!-- Job #2 -->
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="mx-3">
-              <h4>MRHS</h4>
-              <div><strong>2019-Current</strong></div>
-              Web Design CTE Program
-            </div>
-            <ul class="list-group list-group-flush mt-2">
-              <li class="list-group-item">Honors Web Design</li>
-              <li class="list-group-item">Advanced Honors Web Design</li>
-              <li class="list-group-item">NJIT Web Design</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- Skills -->
-      <div class="col">
-        <h3 class="mb-3">Skills</h3>
-        <!-- Skills #1 -->
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="mx-3">
-              <h4>Web Design</h4>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Bootstrap</li>
-                <li>Javascript</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- Skills #2 -->
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="mx-3">
-              <h4>Web Development</h4>
-              <ul>
-                <li>Site Design</li>
-                <li>Wire Frame</li>
-                <li>Building Client Relationships</li>
-                <li>Project Management</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
   <!-- Portfolio Examples -->
   <div class="container">
     <h3>Recent Projects</h3>
@@ -118,10 +49,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/Cfkwlqi.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Spooky Ghost</h5>
-            <p class="card-text">A little spooky ghost made by WebDev SHORTS</p>
-            <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/tJXz5jX.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Little Bird</h5>
+            <p class="card-text">A Little Bird Company</p>
+            <a href="https://github.com/GriffinZW/LittleToyBirds.git" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
