--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="card-body mb-3">
             <img src="https://i.imgur.com/Cfkwlqi.png" alt="Project Screen Shot" class="card-img-top">
             <h5 class="card-title">Spooky Ghost</h5>
-            <p class="card-text">A little spooky ghost made by WebDev SHORTS</p>
+            <p class="card-text">Made by WebDev SHORTS</p>
             <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
@@ -129,10 +129,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/tJXz5jX.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Little Bird</h5>
+            <p class="card-text">A Little Bird Company</p>
+            <a href="https://griffinzw.github.io/LittleToyBirds/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -140,10 +140,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/FsnQ6xR.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Pool Party</h5>
+            <p class="card-text">A Fake Pool Party Invite</p>
+            <a href="https://griffinzw.github.io/My-Party-/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -151,10 +151,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/jBeFN0B.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Famous Quotes</h5>
+            <p class="card-text">Famous Quotes By Hellen Keller</p>
+            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
