--- a/portfolio.html
+++ b/portfolio.html
@@ -49,10 +49,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/tJXz5jX.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Little Bird</h5>
-            <p class="card-text">A Little Bird Company</p>
-            <a href="https://github.com/GriffinZW/LittleToyBirds.git" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/Cfkwlqi.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Spooky Ghost</h5>
+            <p class="card-text">Made by WebDev SHORTS</p>
+            <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -60,14 +60,36 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/tJXz5jX.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Little Bird</h5>
+            <p class="card-text">A Little Bird Company</p>
+            <a href="https://griffinzw.github.io/LittleToyBirds/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
       <!-- Third Project -->
+      <div class="col-md-3 text-center">
+        <div class="card">
+          <div class="card-body mb-3">
+            <img src="https://i.imgur.com/FsnQ6xR.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Pool Party</h5>
+            <p class="card-text">A Fake Pool Party Invite</p>
+            <a href="https://griffinzw.github.io/My-Party-/" class="btn btn-primary">Visit Site</a>
+          </div>
+        </div>
+      </div>
+      <!-- Fourth Project -->
+      <div class="col-md-3 text-center">
+        <div class="card">
+          <div class="card-body mb-3">
+            <img src="https://i.imgur.com/jBeFN0B.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Famous Quotes</h5>
+            <p class="card-text">Famous Quotes By Hellen Keller</p>
+            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
+          </div>
+        </div>
+      </div>
+      <!-- Fifth Project -->
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
@@ -78,7 +100,29 @@
           </div>
         </div>
       </div>
-      <!-- Fourth Project -->
+      <!-- Sixth Project -->
+      <div class="col-md-3 text-center">
+        <div class="card">
+          <div class="card-body mb-3">
+            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Project Title</h5>
+            <p class="card-text">Info About Project</p>
+            <a href="#" class="btn btn-primary">Visit Site</a>
+          </div>
+        </div>
+      </div>
+      <!-- Seventh Project -->
+      <div class="col-md-3 text-center">
+        <div class="card">
+          <div class="card-body mb-3">
+            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Project Title</h5>
+            <p class="card-text">Info About Project</p>
+            <a href="#" class="btn btn-primary">Visit Site</a>
+          </div>
+        </div>
+      </div>
+      <!-- Eigth Project -->
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
@@ -91,20 +135,20 @@
       </div>
     </div>
   </div>
-  <!-- Footer -->
-  <footer class="py-4 bg-dark text-white-50">
-    <div class="container text-center">
-      <small> Copyright &copy ; Your Website</small>
-    </div>
-  </footer>
+    <!-- Footer -->
+    <footer class="py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small> Copyright &copy ; Your Website</small>
+      </div>
+    </footer>
 
 
 
 
 
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 
