--- a/portfolio.html
+++ b/portfolio.html
@@ -93,10 +93,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/GceLv4G.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">JS Dad Jokes</h5>
+            <p class="card-text">A Funny Joke</p>
+            <a href="https://griffinzw.github.io/Dad-Joke/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
