--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="container my-5">
     <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
     <p class="lead">
+      Add a breif description of who you are.
     </p>
 
     <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-primary">523gziedenweber@frhsd.com</a>
@@ -118,10 +119,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/Cfkwlqi.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Spooky Ghost</h5>
-            <p class="card-text">Made by WebDev SHORTS</p>
-            <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/3gdvU3Z.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Famous Quotes</h5>
+            <p class="card-text">Famous Quotes by Hellen Keller</p>
+            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -129,10 +130,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/tJXz5jX.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Little Bird</h5>
-            <p class="card-text">A Little Bird Company</p>
-            <a href="https://griffinzw.github.io/LittleToyBirds/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/UrlEJl1.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Favorite Food</h5>
+            <p class="card-text">Website About Cheese</p>
+            <a href="https://griffinzw.github.io/Food-/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -140,10 +141,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/FsnQ6xR.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Pool Party</h5>
-            <p class="card-text">A Fake Pool Party Invite</p>
-            <a href="https://griffinzw.github.io/My-Party-/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/LwDggkJ.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">My Hero</h5>
+            <p class="card-text">Paul George's Story</p>
+            <a href="https://griffinzw.github.io/My-Hero/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -151,10 +152,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/jBeFN0B.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Famous Quotes</h5>
-            <p class="card-text">Famous Quotes By Hellen Keller</p>
-            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/9HKdlLK.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Thankfullness</h5>
+            <p class="card-text">Showing My Thankfullness</p>
+            <a href="https://griffinzw.github.io/Thankfullness/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
