--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/Cfkwlqi.png" alt="Project Screen Shot" class="card-img-top">
+            <img src="https://i.imgur.com/QVhE4c7.png" alt="Project Screen Shot" class="card-img-top">
             <h5 class="card-title">Spooky Ghost</h5>
             <p class="card-text">Made by WebDev SHORTS</p>
             <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
@@ -104,10 +104,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/ckShI0q.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Tip Calculator</h5>
+            <p class="card-text">A way to quickly find the tip.</p>
+            <a href="https://griffinzw.github.io/TipCalc/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -115,10 +115,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/uDuptMI.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Postcard Generator</h5>
+            <p class="card-text">Creates postcards for the 50 States.</p>
+            <a href="https://griffinzw.github.io/Postcard-Generator/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -126,10 +126,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://picsum.photos/400/200" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Project Title</h5>
-            <p class="card-text">Info About Project</p>
-            <a href="#" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/EfNL9ol.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Rock, Paper, Scissors</h5>
+            <p class="card-text">A fun little game.</p>
+            <a href="https://griffinzw.github.io/RPS/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
