--- a/aboutme.html
+++ b/aboutme.html
@@ -18,6 +18,7 @@
   <div class="container my-5">
     <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
     <p class="lead">
+      Add a breif description of who you are.
     </p>
 
     <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-primary">523gziedenweber@frhsd.com</a>
@@ -44,8 +45,8 @@
   <div class="container center mt-5">
     <div class="row">
       <div class="col mb-3">
-        <h3>About Me!</h3>
-        <h4>My name is Griffin, I am 15 and a Junior.</h4>
+        <h1>About Me!</h1>
+        <h3>My name is Griffin, I am 16 and a Junior.</h3>
         <h4>Classes I've Taken:</h4>
           <ul class="list">
             <li>Electronics</li>
