--- a/aboutme.html
+++ b/aboutme.html
@@ -17,16 +17,13 @@
   <!-- Into Header -->
   <div class="container my-5">
     <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
-    <p class="lead">
-      Add a breif description of who you are.
-    </p>
 
-    <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-primary">523gziedenweber@frhsd.com</a>
+    <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-dark">523gziedenweber@frhsd.com</a>
 
   </div>
   <!-- Navigation Bar -->
   <div class="container">
-    <ul class="nav navbar fixed-top navbar-light bg-light">
+    <ul class="nav navbar fixed-top navbar-dark bg-dark">
       <li class="nav-item">
         <a class="nav-link" href="index.html">Home</a>
       </li>
@@ -69,7 +66,7 @@
   <!-- Footer -->
   <footer class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-      <small> Copyright &copy ; Your Website</small>
+      <small> Copyright &copy ; My Portfolio</small>
     </div>
   </footer>
 
