--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
   <!-- Into Header -->
   <div class="container my-5">
     <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
-    <p class="lead">
-      Add a breif description of who you are.
-    </p>
 
-    <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-primary">523gziedenweber@frhsd.com</a>
+    <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-dark">523gziedenweber@frhsd.com</a>
 
   </div>
   <!-- Navigation Bar -->
   <div class="container">
-    <ul class="nav navbar fixed-top navbar-light bg-light">
+    <ul class="nav navbar fixed-top navbar-dark bg-dark">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link active" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="aboutme.html">About Me</a>
@@ -119,10 +116,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/3gdvU3Z.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Famous Quotes</h5>
-            <p class="card-text">Famous Quotes by Hellen Keller</p>
-            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/EfNL9ol.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Rock, Paper, Scissors</h5>
+            <p class="card-text">A fun little game.</p>
+            <a href="https://griffinzw.github.io/RPS/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -130,10 +127,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/UrlEJl1.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Favorite Food</h5>
-            <p class="card-text">Website About Cheese</p>
-            <a href="https://griffinzw.github.io/Food-/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/uDuptMI.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Postcard Generator</h5>
+            <p class="card-text">Creates postcards for the 50 States.</p>
+            <a href="https://griffinzw.github.io/Postcard-Generator/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -141,10 +138,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/LwDggkJ.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">My Hero</h5>
-            <p class="card-text">Paul George's Story</p>
-            <a href="https://griffinzw.github.io/My-Hero/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/ckShI0q.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Tip Calculator</h5>
+            <p class="card-text">A way to quickly find the tip.</p>
+            <a href="https://griffinzw.github.io/TipCalc/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -152,10 +149,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/9HKdlLK.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Thankfullness</h5>
-            <p class="card-text">Showing My Thankfullness</p>
-            <a href="https://griffinzw.github.io/Thankfullness/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/GceLv4G.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">JS Dad Jokes</h5>
+            <p class="card-text">A Funny Joke</p>
+            <a href="https://griffinzw.github.io/Dad-Joke/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -164,7 +161,7 @@
   <!-- Footer -->
   <footer class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-      <small> Copyright &copy ; Your Website</small>
+      <small> Copyright &copy ; My Portfolio</small>
     </div>
   </footer>
 
