--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,12 @@
     <p class="lead">
     </p>
 
-    <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-primary">523gziedenweber@frhsd.com</a>
+    <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-dark">523gziedenweber@frhsd.com</a>
 
   </div>
   <!-- Navigation Bar -->
   <div class="container">
-    <ul class="nav navbar fixed-top navbar-light bg-light">
+    <ul class="nav navbar fixed-top navbar-dark bg-dark">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
       </li>
@@ -40,22 +40,25 @@
       </li>
     </ul>
   </div>
-
   <!-- Portfolio Examples -->
   <div class="container">
-    <h3>Recent Projects</h3>
+    <h3 class="recentProjectsText">Recent Projects</h3>
     <div class="row">
       <!-- First Project -->
+    <h2>Year: 1</h2>
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/QVhE4c7.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Spooky Ghost</h5>
-            <p class="card-text">Made by WebDev SHORTS</p>
-            <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/jBeFN0B.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Famous Quotes</h5>
+            <p class="card-text">Famous Quotes By Hellen Keller</p>
+            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <h2>Year: 1</h2>
       <!-- Second Project -->
       <div class="col-md-3 text-center">
         <div class="card">
@@ -82,10 +85,10 @@
       <div class="col-md-3 text-center">
         <div class="card">
           <div class="card-body mb-3">
-            <img src="https://i.imgur.com/jBeFN0B.png" alt="Project Screen Shot" class="card-img-top">
-            <h5 class="card-title">Famous Quotes</h5>
-            <p class="card-text">Famous Quotes By Hellen Keller</p>
-            <a href="https://griffinzw.github.io/Famous-Quotes/" class="btn btn-primary">Visit Site</a>
+            <img src="https://i.imgur.com/QVhE4c7.png" alt="Project Screen Shot" class="card-img-top">
+            <h5 class="card-title">Spooky Ghost</h5>
+            <p class="card-text">Made by WebDev SHORTS</p>
+            <a href="https://griffinzw.github.io/Spooky-Ghost/" class="btn btn-primary">Visit Site</a>
           </div>
         </div>
       </div>
@@ -138,7 +141,7 @@
     <!-- Footer -->
     <footer class="py-4 bg-dark text-white-50">
       <div class="container text-center">
-        <small> Copyright &copy ; Your Website</small>
+        <small> Copyright &copy ; My Portfolio</small>
       </div>
     </footer>
 
