--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,9 @@
 <body>
   <!-- Into Header -->
   <div class="container my-5">
-    <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
+      <div class="myNameText">
+          <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
+        </div>
 
     <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-dark">523gziedenweber@frhsd.com</a>
 
@@ -42,8 +44,8 @@
   <div class="container center mt-5">
     <div class="row">
       <div class="col mb-3">
-        <h1>About Me!</h1>
-        <h3>My name is Griffin, I am 16 and a Junior.</h3>
+        <h1 class="aboutMe">About Me!</h1>
+        <h2 class="myAgeIs">My name is Griffin, I am 16 and a Junior.</h2>
         <h4>Classes I've Taken:</h4>
           <ul class="list">
             <li>Electronics</li>
