--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <body>
   <!-- Into Header -->
   <div class="container my-5">
-    <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
-
+    <div class="myNameText">
+      <h1 class="display-1 mb-3">Griffin Zieden-Weber</h1>
+    </div>
     <a href="mailto:523gziedenweber@frhsd.com" type="button" class="btn btn-outline-dark">523gziedenweber@frhsd.com</a>
 
   </div>
