--- a/sponsors.html
+++ b/sponsors.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <script 
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
@@ -53,7 +53,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sponsors.html">Sponsors</a>
+              <a class="nav-link active" href="sponsors.html">Sponsors</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacts.html">Contact Us</a>
@@ -65,52 +65,48 @@
         </div>
       </div>
     </nav>
-
-    <!-- End of .container -->
+    <br />
+    <br />
     <div class="container">
-      <div class="container-fluid">
-        <div class="row pt-3">
-          <div class="col-1"></div>
-          <div class="col-10">
-            <center>
-              <p>
-                Katie's Komets is a co-ed wheelchair basketball team for kids
-                with physical disabilities. The organization is for kids in
-                elementary school through high school graduation. The program
-                does not require that a child be a full-time wheelchair user or
-                even own a wheelchair. All that is necessary is that the child
-                has a long-term physical limitation that prevents him or her
-                from participating in a regular basketball program and is able
-                to operate a manual wheelchair. The team is a member of the
-                National Wheelchair Basketball Association. We practice at the
-                Carousel House in Philadelphia's Fairmount Park once a week on
-                Saturdays. Our games are at travel locations. Katie's Komets has
-                traveled Virginia, New Jersey, New York, Maryland, Alabama, and
-                more. Katie's Komets has also traveled to nationals in
-                Louisville, Kentucky and in April 2014 placed 22nd in the nation
-                and in 2015 Katie's Komets placed 5th in the national NIT
-                division. Katie's Komets also hosts a regional tournament in
-                Philadelphia every January with numerous teams attending from as
-                far away as Florida and Indiana.
-              </p>
-
-              <div class="my-5">
-                <iframe
-                  width="727"
-                  height="409"
-                  src="https://www.youtube.com/embed/AtgfXgpbqs8"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                ></iframe>
-              </div>
-            </center>
-          </div>
-          <div class="col-1"></div>
+      <div class="row">
+        <div class="col">
+          <img src="tkkf10.jpg" />
+        </div>
+        <div class="katieKirlinFund col">
+          The Katie Kirlin Fund is in the memory of Katie, and her
+          accomplishments in wheelchair basketball. The fund’s goal is to give
+          financial aid, that spreads wheelchair sports for children in the
+          Philadelphia and surrounding areas.
         </div>
       </div>
     </div>
+    <br />
+    <center>
+      <button class="button button2">
+        <a href="https://carouselhousepa.com/">Visit Us</a>
+      </button>
+    </center>
+    <br />
+    <div class="container">
+      <div class="row">
+        <div class="katieKirlinFund col">
+          Carousel House was a recreation center in Fairmount Park,
+          Philadelphia, for people with disabilities. This is a project to
+          rebuild the center to serve the same community that it once served
+          long ago.
+        </div>
+        <div class="col">
+          <img src="carousel.gif" />
+        </div>
+      </div>
+    </div>
+    <br />
+    <center>
+      <button class="button button2">
+        <a href="https://carouselhousepa.com/">Visit Us</a>
+      </button>
+    </center>
+    <br />
     <footer class="py-4 bg-dark text-white-50">
       <div class="text-center">
         <a href="index.html">Home</a>
