--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,6 @@
   <div class="container">
     <ul class="nav navbar fixed-top navbar-dark bg-dark">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="aboutme.html">About Me</a>
@@ -36,7 +35,6 @@
         <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Me</a>
       </li>
     </ul>
   </div>
@@ -45,7 +43,7 @@
     <div class="row">
       <div class="col mb-3">
         <h1 class="aboutMe">About Me!</h1>
-        <h2 class="myAgeIs">My name is Griffin, I am 16 and a Junior.</h2>
+        <h2 class="myAgeIs">My name is Griffin, I am 17 and a Senior.</h2>
         <h4>Classes I've Taken:</h4>
           <ul class="list">
             <li>Electronics</li>
