--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,8 @@
 
     <hr>
 
-    <h1 class="mb-5">I took these courses because they all took my interest and had to do with technology. I like to take classes and learn more about electronics, computers, and coding.</h5>
+    <h1 class="mb-5">
+      I took these courses because they all took my interest and had to do with technology. I like to take classes and learn more about electronics, computers, and coding to expand my knowledge and skills in these rapidly evolving fields. By immersing myself in these courses, I aim to stay up-to-date with the latest advancements and trends, empowering myself to actively contribute to the ever-changing world of technology.</h5>
 
   </div>
 
