--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         <li class="nav-item">
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutme.html">About Me</a>
+          <a class="nav-link" href="index.html">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
